# tcgplayer-order-extract

./: .gitignore  LICENSE  README.md  pyproject.toml
tcgplayer_order_extract/: main.py  process.py  storage.py
